--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </div>
   </div>
 </div>
-    <script  src=".javascript/script.js"></script>
+    <script  src="javascript/script.js"></script>
 
   </body>
   
